fixed name is covering position

--- a/css/app.css
+++ b/css/app.css
@@ -108,7 +108,7 @@ footer {
 .player-name > h1 {
 	font-family: 'Fjalla One', serif;
 	margin: 0px;
-	font-size: 68px;
+	font-size: 54px;
 	text-align: right;
 }
 
